Navbar in person1 done

--- a/Storyboard/Storyboards.html
+++ b/Storyboard/Storyboards.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="Storyboards.css">
 </head>
 <body>
+  <!-- Navbar Section -->
+  <nav class="navbar">
+    <div class="navbar-logo">
+        <a href="index.html">
+            <img src="./SwiftBatLogoTransparentC.png" alt="Logo">
+        </a>
+    </div>
+    <ul class="navbar-links">
+        <li><a href="/person1.html">Persona 1</a></li>
+        <li><a href="about.html">Persona 2</a></li>
+        <li><a href="Storyboards.html">Scenario</a></li>
+        <li><a href="Storyboards.html">Storyboard</a></li>
+        <li><a href="Storyboards.html">Moodboard</a></li>
+    </ul>
+</nav>
+
+<!-- Slideshow Section -->
     <div class="slideshow-container">
         <div class="slide fade">
             <img src="./JSScene1.jpg" alt="Scene 1">
