--- a/Storyboard/Storyboards.html
+++ b/Storyboard/Storyboards.html
@@ -17,7 +17,7 @@
     <ul class="navbar-links">
         <li><a href="/person1.html">Persona 1</a></li>
         <li><a href="about.html">Persona 2</a></li>
-        <li><a href="Storyboards.html">Scenario</a></li>
+        <li><a href="/Scenarios/Scenario.html">Scenario</a></li>
         <li><a href="Storyboards.html">Storyboard</a></li>
         <li><a href="Storyboards.html">Moodboard</a></li>
     </ul>
@@ -62,5 +62,9 @@
     </div>
 
     <script src="Storyboards.js"></script>
+    <!-- Footer Section -->
+<footer class="footer">
+  <p>&copy; 2024 SWIFTBAT</p>
+</footer>
 </body>
 </html>
