--- a/person1.html
+++ b/person1.html
@@ -104,6 +104,18 @@
     border-radius: 4px;
 }
 
+.footer {
+    margin-top: 50px;
+    padding: 20px;
+    background-color: #333;
+    color: white;
+}
+
+.footer p {
+    margin: 0;
+    text-align: center
+}
+
 
     </style>
 </head>
@@ -118,7 +130,7 @@
     <ul class="navbar-links">
         <li><a href="./Storyboard/person1.html">Persona 1</a></li>
         <li><a href="./Storyboard/about.html">Persona 2</a></li>
-        <li><a href="./Storyboard/Storyboards.html">Scenario</a></li>
+        <li><a href="/Scenarios/Scenario.html">Scenario</a></li>
         <li><a href="./Storyboard/Storyboards.html">Storyboard</a></li>
         <li><a href="./Storyboard/Storyboards.html">Moodboard</a></li>
     </ul>
@@ -187,5 +199,9 @@
         </div>
     </div>
 </div>
+<!-- Footer Section -->
+<footer class="footer">
+    <p>&copy; 2024 SWIFTBAT</p>
+</footer>
 </body>
 </html>
