persona 1 and persona 2 fixes done

--- a/person1.html
+++ b/person1.html
@@ -128,8 +128,8 @@
         </a>
     </div>
     <ul class="navbar-links">
-        <li><a href="./Storyboard/person1.html">Persona 1</a></li>
-        <li><a href="./Storyboard/about.html">Persona 2</a></li>
+        <li><a href="person1.html">Persona 1</a></li>
+        <li><a href="/person2.html">Persona 2</a></li>
         <li><a href="/Scenarios/Scenario.html">Scenario</a></li>
         <li><a href="./Storyboard/Storyboards.html">Storyboard</a></li>
         <li><a href="./Storyboard/Storyboards.html">Moodboard</a></li>
@@ -194,8 +194,8 @@
             <h2 class="title">Bio</h2>
             <p>Alex is a medical sales representative who frequently has to travel on short notice for emergencies at hospitals and clinics. Alex values speed and efficiency over luxury, preferring travel solutions that are quick and reliable. He often feels the pressure of arriving on time to meet clients and deliver crucial medical equipment, so avoiding delays is paramount. Although he’s used to frequent travel, he finds that unexpected emergencies often make planning difficult and stressful.</p>
             <h2 class="title">Favourite Destinations</h2>
-            <img src="city1.jpg" alt="City Image 1" style="width: 100%; height: auto;">
-            <img src="city2.jpg" alt="City Image 2" style="width: 100%; height: auto;">
+            <img src="CityImage.jpg" alt="City Image 1" style="width: 100%; height: auto;">
+            <img src="CityImage2.jpg" alt="City Image 2" style="width: 100%; height: auto;">
         </div>
     </div>
 </div>
