change in style and added index

--- a/person1.html
+++ b/person1.html
@@ -74,7 +74,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    background-color: #444;
+    background-color: #001f3f;
 }
 
 .navbar-logo img {
@@ -100,15 +100,15 @@
 }
 
 .navbar-links a:hover {
-    background-color: #666;
+    background-color: #dac96b;
     border-radius: 4px;
 }
 
 .footer {
     margin-top: 50px;
     padding: 20px;
-    background-color: #333;
-    color: white;
+    background-color: #001f3f; /* Slightly darker blue for footer */
+    color: #FFD700;
 }
 
 .footer p {
@@ -123,7 +123,7 @@
       <!-- Navbar Section -->
   <nav class="navbar">
     <div class="navbar-logo">
-        <a href="index.html">
+        <a href="./Index/index.html">
             <img src="./Storyboard/SwiftBatLogoTransparentC.png" alt="Logo">
         </a>
     </div>
