--- a/person2.html
+++ b/person2.html
@@ -11,7 +11,7 @@
     <!-- Navbar Section -->
   <nav class="navbar">
     <div class="navbar-logo">
-        <a href="index.html">
+        <a href="./Index/index.html">
             <img src="./Storyboard/SwiftBatLogoTransparentC.png" alt="Logo">
         </a>
     </div>
