--- a/Storyboard/Storyboards.html
+++ b/Storyboard/Storyboards.html
@@ -10,9 +10,9 @@
   <!-- Navbar Section -->
   <nav class="navbar">
     <div class="navbar-logo">
-        <a href="index.html">
-            <img src="./SwiftBatLogoTransparentC.png" alt="Logo">
-        </a>
+      <a href="/Index/index.html">
+        <img src="/Storyboard/SwiftBatLogoTransparentC.png" alt="Logo">
+    </a>
     </div>
     <ul class="navbar-links">
         <li><a href="/person1.html">Persona 1</a></li>
