--- a/Index/index.html
+++ b/Index/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SWIFTBAT</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" type="image/x-icon" href="/SWIFTBATICON.ico">
+
 </head>
 <body>
+
     <!-- Navbar Section -->
     <nav class="navbar">
         <div class="navbar-logo">
