--- a/person1.html
+++ b/person1.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Persona - Emergency Traveler</title>
+    <link rel="icon" type="image/x-icon" href="/SWIFTBATICON.ico">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -125,6 +127,7 @@
     <div class="navbar-logo">
         <a href="./Index/index.html">
             <img src="./Storyboard/SwiftBatLogoTransparentC.png" alt="Logo">
+            
         </a>
     </div>
     <ul class="navbar-links">
