--- a/person2.html
+++ b/person2.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Persona - Adventure Seeker</title>
     <link rel="stylesheet" href="person2.css">
+    <link rel="icon" type="image/x-icon" href="/SWIFTBATICON.ico">
+
 
 </head>
 <body>
