--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
         <div class="navbar-logo">
             <a href="index.html">
-                <img src="/Storyboard/SwiftBatLogoTransparentC.png" alt="Logo">
+                <img src="./Storyboard/SwiftBatLogoTransparentC.png" alt="Logo">
             </a>
         </div>
         <ul class="navbar-links">
