--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <ul class="navbar-links">
             <li><a href="person1.html">Persona 1</a></li>
-            <li><a href="/person2.html">Persona 2</a></li>
+            <li><a href="person2.html">Persona 2</a></li>
             <li><a href="/Scenarios/Scenario.html">Scenario</a></li>
             <li><a href="/Storyboard/Storyboards.html">Storyboard</a></li>   
             <li><a href="/Storyboard/Storyboards.html">Moodboard</a></li>    
