--- a/Storyboard/Storyboards.html
+++ b/Storyboard/Storyboards.html
@@ -12,7 +12,7 @@
   <!-- Navbar Section -->
   <nav class="navbar">
     <div class="navbar-logo">
-      <a href="index.html">
+      <a href="/index.html">
         <img src="/Storyboard/SwiftBatLogoTransparentC.png" alt="Logo">
     </a>
     </div>
