Moodboard upload it

--- a/Moodboard.html
+++ b/Moodboard.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flowchart Showcase</title>
-    <link rel="stylesheet" href="Scenario.css">
+    <title>Moodboard for SWIFTBAT</title>
+    <link rel="stylesheet" href="Moodboard.css">
     <link rel="icon" type="image/x-icon" href="/SWIFTBATICON.ico">
 
 </head>
@@ -29,7 +29,7 @@
 
     <!-- Flowchart Image Section -->
     <div class="flowchart-container">
-        <img src="./ScenarioFlowchartGraph.png" alt="Scenario Flowchart" class="flowchart-image">
+        <img src="./Moodboard.jpg" alt="Moodboardd" class="flowchart-image">
     </div>
 
     <!-- Footer Section -->
