--- a/person1.html
+++ b/person1.html
@@ -135,7 +135,7 @@
         <li><a href="/person2.html">Persona 2</a></li>
         <li><a href="/Scenarios/Scenario.html">Scenario</a></li>
         <li><a href="./Storyboard/Storyboards.html">Storyboard</a></li>
-        <li><a href="./Storyboard/Storyboards.html">Moodboard</a></li>
+        <li><a href="/Moodboard.html">Moodboard</a></li>
     </ul>
 </nav>
 <div class="container">
