--- a/Storyboard/Storyboards.html
+++ b/Storyboard/Storyboards.html
@@ -21,7 +21,7 @@
         <li><a href="/person2.html">Persona 2</a></li>
         <li><a href="/Scenarios/Scenario.html">Scenario</a></li>
         <li><a href="Storyboards.html">Storyboard</a></li>
-        <li><a href="Storyboards.html">Moodboard</a></li>
+        <li><a href="/Moodboard.html">Moodboard</a></li>
     </ul>
 </nav>
 
