--- a/Scenarios/Scenario.html
+++ b/Scenarios/Scenario.html
@@ -22,6 +22,7 @@
         <li><a href="/Scenarios/Scenario.html">Scenario</a></li>
         <li><a href="/Storyboard/Storyboards.html">Storyboard</a></li>
         <li><a href="/Moodboard.html">Moodboard</a></li>
+        <li><a href="/Contact.html">Contact</a></li>    
     </ul>
 </nav>
     <!-- Header Section -->
