--- a/person2.html
+++ b/person2.html
@@ -23,6 +23,7 @@
         <li><a href="/Scenarios/Scenario.html">Scenario</a></li>
         <li><a href="./Storyboard/Storyboards.html">Storyboard</a></li>
         <li><a href="/Moodboard.html">Moodboard</a></li>
+        <li><a href="/Contact.html">Contact</a></li>    
     </ul>
 </nav>
     <div class="container">
