--- a/Scenarios/NextScenario.html
+++ b/Scenarios/NextScenario.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moodboard for SWIFTBAT</title>
-    <link rel="stylesheet" href="Moodboard.css">
+    <title>Flowchart Showcase</title>
+    <link rel="stylesheet" href="Scenario.css">
     <link rel="icon" type="image/x-icon" href="/SWIFTBATICON.ico">
 
 </head>
@@ -23,7 +23,7 @@
         <li><a href="/Scenarios/NextScenario.html">Scenario 2</a></li>
         <li><a href="/Storyboard/Storyboards.html">Storyboard</a></li>
         <li><a href="/Moodboard.html">Moodboard</a></li>
-        <li><a href="/Contact.html">Contact</a></li>  
+        <li><a href="/Contact.html">Contact</a></li>    
     </ul>
 </nav>
     <!-- Header Section -->
@@ -31,7 +31,7 @@
 
     <!-- Flowchart Image Section -->
     <div class="flowchart-container">
-        <img src="./Moodboard.jpg" alt="Moodboardd" class="flowchart-image">
+        <img src="./CancellationScenario.jpg" alt="Scenario Flowchart" class="flowchart-image">
     </div>
 
     <!-- Footer Section -->
