--- a/person1.html
+++ b/person1.html
@@ -134,6 +134,7 @@
         <li><a href="person1.html">Persona 1</a></li>
         <li><a href="/person2.html">Persona 2</a></li>
         <li><a href="/Scenarios/Scenario.html">Scenario</a></li>
+        <li><a href="/Scenarios/NextScenario.html">Scenario 2</a></li>
         <li><a href="./Storyboard/Storyboards.html">Storyboard</a></li>
         <li><a href="/Moodboard.html">Moodboard</a></li>
         <li><a href="/Contact.html">Contact</a></li>    
