--- a/person2.html
+++ b/person2.html
@@ -24,7 +24,8 @@
         <li><a href="/Scenarios/NextScenario.html">Scenario 2</a></li>
         <li><a href="./Storyboard/Storyboards.html">Storyboard</a></li>
         <li><a href="/Moodboard.html">Moodboard</a></li>
-        <li><a href="/Contact.html">Contact</a></li>    
+        <li><a href="/Contact.html">Contact</a></li>
+        <li><a href="/Flowchart.html">Flowchart</a></li>       
     </ul>
 </nav>
     <div class="container">
