--- a/Flowchart.html
+++ b/Flowchart.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flowchart Showcase</title>
-    <link rel="stylesheet" href="Scenario.css">
+    <title>Flowchart</title>
+    <link rel="stylesheet" href="Flowchart.css">
     <link rel="icon" type="image/x-icon" href="/SWIFTBATICON.ico">
 
 </head>
@@ -24,7 +24,7 @@
         <li><a href="/Storyboard/Storyboards.html">Storyboard</a></li>
         <li><a href="/Moodboard.html">Moodboard</a></li>
         <li><a href="/Contact.html">Contact</a></li>
-        <li><a href="/Flowchart.html">Flowchart</a></li>       
+        <li><a href="/Flowchart.html">Flowchart</a></li>    
     </ul>
 </nav>
     <!-- Header Section -->
