--- a/Scenarios/Scenario.html
+++ b/Scenarios/Scenario.html
@@ -24,6 +24,7 @@
         <li><a href="/Storyboard/Storyboards.html">Storyboard</a></li>
         <li><a href="/Moodboard.html">Moodboard</a></li>
         <li><a href="/Contact.html">Contact</a></li>
+        <li><a href="/Flowchart.html">Flowchart</a></li>   
 
     </ul>
 </nav>
