--- a/Storyboard/Storyboards.html
+++ b/Storyboard/Storyboards.html
@@ -23,7 +23,8 @@
         <li><a href="/Scenarios/NextScenario.html">Scenario 2</a></li>
         <li><a href="Storyboards.html">Storyboard</a></li>
         <li><a href="/Moodboard.html">Moodboard</a></li>
-        <li><a href="/Contact.html">Contact</a></li>  
+        <li><a href="/Contact.html">Contact</a></li>
+        <li><a href="/Flowchart.html">Flowchart</a></li>     
     </ul>
 </nav>
 
