--- a/Flowchart.html
+++ b/Flowchart.html
@@ -32,7 +32,7 @@
 
     <!-- Flowchart Image Section -->
     <div class="flowchart-container">
-        <img src="./CancellationScenario.jpg" alt="Scenario Flowchart" class="flowchart-image">
+        <img src="./FlowchartSWIFTBAT.png" alt="Scenario Flowchart" class="flowchart-image">
     </div>
 
     <!-- Footer Section -->
