New addition of wireframe

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <li><a href="/Storyboard/Storyboards.html">Storyboard</a></li>   
             <li><a href="/Moodboard.html">Moodboard</a></li>    
             <li><a href="/Contact.html">Contact</a></li>
-            <li><a href="/Flowchart.html">Flowchart</a></li>       
+            <li><a href="/Flowchart.html">Flowchart</a></li>
+            <li><a href="/Wireframe.html">Wireframe</a></li>
         </ul>
     </nav>
     
