--- a/Storyboard/Storyboards.html
+++ b/Storyboard/Storyboards.html
@@ -25,6 +25,7 @@
         <li><a href="/Moodboard.html">Moodboard</a></li>
         <li><a href="/Contact.html">Contact</a></li>
         <li><a href="/Flowchart.html">Flowchart</a></li>     
+        <li><a href="/Wireframe.html">Wireframe</a></li>
     </ul>
 </nav>
 
