--- a/ActualPageHTML/HomepageS.html
+++ b/ActualPageHTML/HomepageS.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SwiftBat</title>
     <link rel="stylesheet" href="/ActualPageCSS/HomepageS.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <header class="navbar">
-        <div class="logo">
-            <img src="swiftbat-logo.png" alt="SwiftBat Logo">
-            <span>SWIFTBAT</span>
-        </div>
+
+    <div class="logo">
+        <img src="/ActualWebsiteImages/SwiftBatLogoTransparentC.png" alt="SwiftBat Logo" class="logo-image">
+    </div>
+
         <nav>
             <ul>
                 <li><a href="#">Book</a></li>
@@ -23,6 +25,8 @@
             </ul>
         </nav>
         <div class="sign-in">
+
+            <img src="/ActualWebsiteImages/UserIcon.png" alt="User Icon" class="user-icon"> <!-- Add the image -->
             <a href="#">Sign In</a>
         </div>
     </header>
@@ -48,11 +52,10 @@
                 <div class="form-row">
                     <input type="text" placeholder="From">
                     <input type="text" placeholder="To">
-                </div>
-                <div class="form-row">
                     <input type="date" placeholder="Depart">
                     <input type="date" placeholder="Return">
                 </div>
+
                 <button type="submit">Search flights</button>
             </form>
         </section>
