--- a/ActualPageHTML/HomepageS.html
+++ b/ActualPageHTML/HomepageS.html
@@ -60,6 +60,11 @@
             </form>
         </section>
     </main>
+
+        <!-- Footer Section -->
+        <footer class="footer">
+            <p>&copy; 2024 SWIFTBAT</p>
+        </footer>
 </body>
 
 </html>
