--- a/ActualPageHTML/HomepageS.html
+++ b/ActualPageHTML/HomepageS.html
@@ -79,9 +79,11 @@
         </section>
     </main>
 
-    <footer class="footer">
+<footer class="footer">
+    <a href="../index.html" target="_blank" rel="noopener noreferrer">
         <p>&copy; 2024 SWIFTBAT</p>
-    </footer>
+    </a>
+</footer>
 
 </body>
 
