Addition of new webs

--- a/Moodboard.html
+++ b/Moodboard.html
@@ -37,7 +37,7 @@
 
     <!-- Flowchart Image Section -->
     <div class="flowchart-container">
-        <img src="./Moodboard.jpg" alt="Moodboardd" class="flowchart-image">
+        <img src="./Moodboard.jpg" alt="Moodboard" class="flowchart-image">
     </div>
 
     <!-- Footer Section -->
