--- a/ActualPageHTML/DepartingFlightS.html
+++ b/ActualPageHTML/DepartingFlightS.html
@@ -32,10 +32,9 @@
 
         <div class="sign-in">
             <img src="/ActualWebsiteImages/UserIcon.png" alt="User Icon" class="user-icon">
-            <a href="#">Sign In</a>
+            <a href="Signin.html">Sign In</a>
         </div>
-
-    </header>
+        </header>
 
     <main>
     <section class="flight-selection">
