--- a/ActualPageHTML/HomepageS.html
+++ b/ActualPageHTML/HomepageS.html
@@ -20,16 +20,16 @@
 
         <nav>
             <ul>
-                <li><a href="#">Book</a></li>
-                <li><a href="#">Manage Trips</a></li>
-                <li><a href="#">Check In</a></li>
-                <li><a href="#">Travel Info</a></li>
+                <li><a href="HomepageS.html">Book</a></li>
+                <li><a href="ManageTrips.html">Manage Trips</a></li>
+                <li><a href="CheckIn.html">Check In</a></li>
+                <li><a href="TravelInfo.html">Travel Info</a></li>
             </ul>
         </nav>
         
         <div class="sign-in">
             <img src="/ActualWebsiteImages/UserIcon.png" alt="User Icon" class="user-icon">
-            <a href="#">Sign In</a>
+            <a href="Signin.html">Sign In</a>
         </div>
     </header>
 
