--- a/ActualPageHTML/ReturningFlightS.html
+++ b/ActualPageHTML/ReturningFlightS.html
@@ -28,7 +28,7 @@
 
         <div class="sign-in">
             <img src="/ActualWebsiteImages/UserIcon.png" alt="User Icon" class="user-icon">
-            <a href="#">Sign In</a>
+            <a href="Signin.html">Sign In</a>
         </div>
     </header>
 
