--- a/person1.html
+++ b/person1.html
@@ -142,7 +142,7 @@
         <li><a href="/Wireframe.html">Wireframe</a></li>
         <li><a href="../ActualPageHTML/HomepageS.html">Website</a></li>
                             <li><a
-                                    href="https://www.figma.com/proto/2nFDPz5rkpLGf5VyKRKFQ4/Swiftbat-Prototype?node-id=1-168&node-type=canvas&t=jX7d5NJsWvSCzTio-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A168&show-proto-sidebar=1">Prototype</a>
+                                    href="https://www.figma.com/proto/2nFDPz5rkpLGf5VyKRKFQ4/Swiftbat-Prototype?node-id=1-69&node-type=canvas&t=kV1pf6pqbljXzODn-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A69">Prototype</a>
                             </li>
     </ul>
 </nav>
