--- a/Storyboard/Storyboards.html
+++ b/Storyboard/Storyboards.html
@@ -30,6 +30,7 @@
                             <li><a
                                     href="https://www.figma.com/proto/2nFDPz5rkpLGf5VyKRKFQ4/Swiftbat-Prototype?node-id=1-168&node-type=canvas&t=jX7d5NJsWvSCzTio-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A168&show-proto-sidebar=1">Prototype</a>
                             </li>
+                            <li><a href="/Analysis.html">Analysis</a></li>
     </ul>
 </nav>
 
