--- a/person1.html
+++ b/person1.html
@@ -144,6 +144,7 @@
                             <li><a
                                     href="https://www.figma.com/proto/2nFDPz5rkpLGf5VyKRKFQ4/Swiftbat-Prototype?node-id=1-69&node-type=canvas&t=kV1pf6pqbljXzODn-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A69">Prototype</a>
                             </li>
+                            <li><a href="/Analysis.html">Analysis</a></li>
     </ul>
 </nav>
 <div class="container">
